--- a/src/app/features/bulk-upload/file-validate-status/file-validate-status.component.scss
+++ b/src/app/features/bulk-upload/file-validate-status/file-validate-status.component.scss
@@ -1,4 +1,4 @@
-@import '~govuk-frontend/govuk/base';
+@import 'govuk-frontend/govuk/base';
 
 .govuk-file-validate-status {
   margin-bottom: govuk-spacing(0) !important;
