--- a/src/app/features/bulk-upload/help-area/bulk-upload-flowchart/bulk-upload-flowchart.component.scss
+++ b/src/app/features/bulk-upload/help-area/bulk-upload-flowchart/bulk-upload-flowchart.component.scss
@@ -1,4 +1,4 @@
-@import '~govuk-frontend/govuk/base';
+@import 'govuk-frontend/govuk/base';
 
 .asc-flowchart-image-container {
   overflow-x: scroll;
