--- a/src/app/features/bulk-upload/help-area/bulk-upload-help-main-page.component.scss
+++ b/src/app/features/bulk-upload/help-area/bulk-upload-help-main-page.component.scss
@@ -1,4 +1,4 @@
-@import '~govuk-frontend/govuk/base';
+@import 'govuk-frontend/govuk/base';
 
 h2 {
   border-bottom: 1px solid $govuk-input-border-colour;
