--- a/src/app/shared/components/benchmark-tile/benchmark-tile.component.scss
+++ b/src/app/shared/components/benchmark-tile/benchmark-tile.component.scss
@@ -1,4 +1,4 @@
-@import '~govuk-frontend/govuk/base';
+@import 'govuk-frontend/govuk/base';
 
 $govuk-font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
 
