--- a/src/app/features/admin/admin-menu/admin-menu.component.scss
+++ b/src/app/features/admin/admin-menu/admin-menu.component.scss
@@ -1,4 +1,4 @@
-@import '~govuk-frontend/govuk/base';
+@import 'govuk-frontend/govuk/base';
 
 li {
   border-bottom: 1px $govuk-border-colour solid;
