--- a/src/app/features/admin/emails/targeted-emails/targeted-emails.component.scss
+++ b/src/app/features/admin/emails/targeted-emails/targeted-emails.component.scss
@@ -1,4 +1,4 @@
-@import '~govuk-frontend/govuk/base';
+@import 'govuk-frontend/govuk/base';
 .asc-summary-box {
   background-color: govuk-colour('light-grey');
   padding: 20px 40px;
