--- a/src/app/features/new-dashboard/dashboard-header/dashboard-header.component.scss
+++ b/src/app/features/new-dashboard/dashboard-header/dashboard-header.component.scss
@@ -1,4 +1,4 @@
-@import '~govuk-frontend/govuk/base';
+@import 'govuk-frontend/govuk/base';
 
 .asc-dashboard-header {
   background-color: govuk-colour('light-grey');
