--- a/src/app/shared/components/progress-bar/progress-bar.component.scss
+++ b/src/app/shared/components/progress-bar/progress-bar.component.scss
@@ -1,4 +1,4 @@
-@import '~govuk-frontend/govuk/base';
+@import 'govuk-frontend/govuk/base';
 
 .asc-progress-bar {
   @media only screen and (max-width: 768px) {
