--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,7 +3,7 @@
 $govuk-global-styles: true;
 $govuk-font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
 
-@import '~govuk-frontend/govuk/all';
+@import 'govuk-frontend/govuk/all';
 
 body {
   font-family: $govuk-font-family;
