--- a/src/assets/scss/modules/_overlay.scss
+++ b/src/assets/scss/modules/_overlay.scss
@@ -1,4 +1,4 @@
-@import '@angular/cdk/_index.scss';
+@import '~@angular/cdk/_index.scss';
 
 $cdk-overlay-dark-backdrop-background: rgba(0, 0, 0, 0.5);
 $backdrop-animation-duration: 0ms !default;
